# tree-sitter-almide

./: .gitignore  Cargo.toml  README.md  build.rs  grammar.js  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/rust/: lib.rs
generator/: almide_grammar.almd  gen-grammar  main.almd  rule.almd
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt  expressions.txt
